<resources>
  <string name="app_name">VNGRS Pomodoro</string>

  <string name="settings">Settings</string>

  <!-- Strings related to the Settings in the VNGRS Flavor.-->
  <string name="key_notifications_vibrate" translatable="false">notifications_vibrate</string>
  <string name="key_notifications_enabled" translatable="false">notifications_enabled</string>
  <string name="key_remote_api" translatable="false">remote_api</string>
  <string name="default_remote_api" translatable="false">http://pomodoro.vngrs.int</string>


  <!-- Strings related to Settings -->
  <string name="pref_header_general">General</string>
  <string name="pref_header_notifications">Notifications</string>

  <string name="pref_title_remote_api">Remote API</string>

  <string name="pref_summary_notifications_enabled">Notifications Enabled</string>
  <string name="pref_summary_notifications_disabled">Notifications Disabled</string>

  <!--<string name="pref_title_ringtone">Ringtone</string>-->
  <string name="pref_ringtone_silent">Silent</string>
  <string name="pref_title_vibrate">Vibrate</string>
</resources>
