<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/pref_header_general">
    <EditTextPreference
      android:key="@string/key_remote_api"
      android:title="@string/pref_title_remote_api"
      android:defaultValue="@string/default_remote_api"
      android:selectAllOnFocus="true"
      android:inputType="textUri"
      android:capitalize="none"
      android:singleLine="true"
      android:maxLines="1" />

    <!--<ListPreference-->
    <!--android:key="example_list"-->
    <!--android:title="@string/pref_title_add_friends_to_messages"-->
    <!--android:defaultValue="-1"-->
    <!--android:entries="@array/pref_example_list_titles"-->
    <!--android:entryValues="@array/pref_example_list_values"-->
    <!--android:negativeButtonText="@null"-->
    <!--android:positiveButtonText="@null" />-->
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_header_notifications">
    <CheckBoxPreference
      android:key="@string/key_notifications_enabled"
      android:title="@string/pref_header_notifications"
      android:summaryOff="@string/pref_summary_notifications_disabled"
      android:summaryOn="@string/pref_summary_notifications_enabled"
      android:defaultValue="true" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <CheckBoxPreference
      android:dependency="@string/key_notifications_enabled"
      android:key="@string/key_notifications_vibrate"
      android:title="@string/pref_title_vibrate"
      android:defaultValue="true" />
  </PreferenceCategory>
</PreferenceScreen>
